feat: 비즈니스 로직에서 보따리 템플릿 미존재 시 예외 처리 개선